@startuml

' ======================
' ENUMS
' ======================

enum SystemRole {
  SYSTEM_ADMIN
  USER
}

enum GroupRole {
  OWNER
  MODERATOR
  MEMBER
}

enum QueueStatus {
  WAITING
  PASSED
  SKIPPED
}

enum NotificationType {
  QUEUE_REMINDER
  CUSTOM
}

enum NotificationStatus {
  PENDING
  SENT
  READ
}

' ======================
' DOMAIN ENTITIES
' ======================

class User {
  - userId: UUID
  - email: String
  - passwordHash: String
  - firstName: String
  - lastName: String
  - role: SystemRole
  - isActive: Boolean

  + createGroup(name, description): Group
  + joinGroup(group: Group): void
}

class Group {
  - groupId: UUID
  - name: String
  - description: String
  - members: List<GroupMember>
  - queues: List<Queue>
  - isArchived: Boolean

  + addMember(user: User, role: GroupRole): void
  + removeMember(user: User): void
  + createQueue(**queue_data): Queue
  + removeQueue(queue_id: queueId): void
}

class GroupMember {
  - groupMemberId: UUID
  - user: User
  - role: GroupRole
  - joinedAt: DateTime

  + changeRole(newRole: GroupRole): void
}

class Queue {
  - queueId: UUID
  - title: String
  - description: String
  - eventDate: DateTime
  - regOpen: DateTime
  - regClose: DateTime
  - maxSize: Integer
  - entries: Map<queueEntryId, QueueEntry>
  - isActive: Boolean

  + openRegistration(): void
  + closeRegistration(): void
  + addEntry(user: User): QueueEntry
  + removeEntry(user: User): void
  + sendNotification(notification: Notification): void
}

class QueueEntry {
  - entry: User
  - position: Integer
  - status: QueueStatus
  - joinedAt: DateTime

  + markPassed(): void
  + markSkipped(): void
}

class Notification {
  - notificationId: UUID
  - message: String
  - type: NotificationType
  - status: NotificationStatus
  - scheduledAt: DateTime
  - sentAt: DateTime

  + markSent(): void
  + markRead(): void
}

' ======================
' RELATIONSHIPS
' ======================

'User "1" -- "0..*" GroupMember : memberships
'User "1" -- "0..*" QueueEntry : queueEntries

User "1" -- "0..*" Group : create/join
User "1" -- "0..*" Notification : relatedUser

Group "1" -- "0..*" GroupMember : members
Group "1" -- "0..*" Queue : queues

Queue "1" -- "0..*" QueueEntry : entries
Queue "0..1" -- "0..*" Notification : relatedQueue

@enduml